<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.fitabs.AddContactActivity">
    <Button
        android:id="@+id/cancelAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="cancelAdd"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:background="#bdbdbd"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="190dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"/>
    <Button
        android:id="@+id/saveContact"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="saveContact"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:background="#8bc34a"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="190dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/textContactUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change username"
        app:layout_constraintTop_toBottomOf="@+id/textContactUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textContactUsername" />
    <TextView
        android:id="@+id/textTelnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/textAboutNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change phone number"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textTelnumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textTelnumber" />
    <EditText
        android:id="@+id/createUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:hint="Username"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/textContactUsername"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginStart="55dp"
        app:layout_constraintTop_toTopOf="@+id/textView" />
    <EditText
        android:id="@+id/createTelnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:hint="Phone number"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/textTelnumber"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/createUsername" />
</android.support.constraint.ConstraintLayout>