<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.fitabs.UserSettingsActivity">
    <LinearLayout
        android:id="@+id/linearLay"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:id="@+id/userView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="User Settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintTop_creator="1"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/linearLay"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/linearLay"
        android:layout_marginStart="16dp"/>
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:maxLength="20"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/editTelNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editTelNumber"
        app:layout_constraintTop_toTopOf="@+id/textView" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change username"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textUsername" />
    <TextView
        android:id="@+id/textTelnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
    <EditText
        android:id="@+id/editTelNumber"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Number"
        android:inputType="number"
        android:maxLength="8"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxStatus" />
    <TextView
        android:id="@+id/textAboutNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change phone number"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textTelnumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textTelnumber" />
    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textAboutNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/textAboutStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Are you coach?"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textStatus"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textStatus" />
    <CheckBox
        android:id="@+id/checkBoxStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coach"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTelNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textAboutNumber" />
    <TextView
        android:id="@+id/nsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Network Settings"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:layout_gravity="center"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textAboutStatus"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textAboutStatus" />
    <TextView
        android:id="@+id/textIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IP"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nsText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nsText" />
    <EditText
        android:id="@+id/editIP"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="IP address"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:maxLength="20"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/IPView"
        app:layout_constraintRight_toRightOf="@+id/editTelNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editTelNumber"
        app:layout_constraintTop_toTopOf="@+id/IPView" />
    <TextView
        android:id="@+id/IPView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Server IP Address"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textIP"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textIP" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:onClick="saveUser"
        android:text="SAVE"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="18dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/editIP"
        android:textColor="#FFFFFF"
        android:background="#8bc34a"/>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_main"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom">
    </android.support.design.widget.BottomNavigationView>
</android.support.constraint.ConstraintLayout>